@@ -15,6 +15,6 @@
 #define CPP_VERSION_MAJOR           BOOST_WAVE_VERSION_MAJOR
 #define CPP_VERSION_MINOR           BOOST_WAVE_VERSION_MINOR
 #define CPP_VERSION_SUBMINOR        BOOST_WAVE_VERSION_SUBMINOR
-#define CPP_VERSION_DATE            20050218L
+#define CPP_VERSION_DATE            20050312L
 
 #endif // !defined(CPP_VERSION_HPP_CE4FE67F_63F9_468D_8364_C855F89D3C5D_INCLUDED)
